# c_maths

./: AABB.h  CMakeLists.txt  c  cpp  help.h  main.c  main.h  mat4.c  mat4.h  physics.c  sphere.h  vec3.c  vec3.h
include/: AABB.h  main.h  mat4.h  sphere.h  test.h  vec3.h  vec4.h
src/: AABB.c  Mat4.c  Sphere.c  Vec3.c  main.c  test.c
